2007-11-15  Murray Cumming  <murrayc@murrayc.com>

	* clutter/src/clutter_signals.defs: Corrected the 
	Actor::enter-event signal definition.
	* clutter/src/actor.hg: Added some event signals that were 
	commented out.
	* clutter/src/alpha.ccg:
	* clutter/src/alpha.hg: Added a constructor (and create) 
	which takes a timeline and alpha callback.
	* clutter/src/container.ccg:
	* clutter/src/container.hg: Added foreach() and 
	sort_depth_order(), and the foreach() vfunc.
	* clutter/src/stage.hg: Added stage_event().
	* clutter/src/timeline.hg: Added clone().

2007-11-12  Murray Cumming  <murrayc@murrayc.com>

	* clutter/src/actor.hg: Wrapped get_scalex().
	* clutter/src/behaviour.hg: Wrapped get_actors().
	* tools/m4/convert_cluttermm.m4: Moved the signal conversion into the .hg file, 
	to avoid it being used anywhere else.

2007-11-12  Murray Cumming  <murrayc@murrayc.com>

	* clutter/src/texture.ccg:
	* clutter/src/texture.hg: Use _WRAP_GERROR() to wrap the 
	GError, and use the errthrow parameter with _WRAP_METHOD.

2007-11-12  Murray Cumming  <murrayc@murrayc.com>

	* clutter/cluttermm/types.h: Added Fixed and *Event typedefs.
	* tools/m4/convert_cluttermm.m4: Added conversions.
	* clutter/src/actor.ccg:
	* clutter/src/actor.hg: Used *Event typedefs.
	* clutter/src/alpha.ccg:
	* clutter/src/alpha.hg:
	* clutter/src/behaviour-bspline.ccg:
	* clutter/src/behaviour-bspline.hg:
	* clutter/src/behaviour-depth.ccg:
	* clutter/src/behaviour-depth.hg:
	* clutter/src/behaviour-opacity.ccg:
	* clutter/src/behaviour-opacity.hg:
	* clutter/src/behaviour-path.ccg:
	* clutter/src/behaviour-path.hg:
	* clutter/src/behaviour.ccg:
	* clutter/src/behaviour.hg:
	* clutter/src/box.ccg:
	* clutter/src/box.hg:
	* clutter/src/color.ccg:
	* clutter/src/color.hg:
	* clutter/src/container.ccg:
	* clutter/src/container.hg:
	* clutter/src/entry.ccg:
	* clutter/src/entry.hg:
	* clutter/src/group.ccg:
	* clutter/src/group.hg:
	* clutter/src/label.ccg:
	* clutter/src/label.hg: